Bug 59183 - EDITING: Copy 4 or more slides then crash
Summary: EDITING: Copy 4 or more slides then crash
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
4.0.0.0.beta2
Hardware: Other All
: high critical
Assignee: Caolán McNamara
URL:
Whiteboard: BSA bibisected40 target:4.1.0 target:...
Keywords: regression
: 59535 (view as bug list)
Depends on:
Blocks: mab4.0
  Show dependency treegraph
 
Reported: 2013-01-09 22:47 UTC by Thisisnice1000000
Modified: 2015-12-22 01:37 UTC (History)
7 users (show)

See Also:
Crash report or crash signature:


Attachments
bt + console logs on master (15.71 KB, text/plain)
2013-01-10 21:05 UTC, Julien Nabet
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Thisisnice1000000 2013-01-09 22:47:25 UTC
Problem description: 
When you select 4 or more slides to copy, the program will crash as soon as you select copy from menu bar or right click menu.  It does not matter how they are selected with mouse and keys and they do not have to be in order.  It also does not matter if the presentation was created by an older version of the program (3.5.4) or this version 4.0.0.0.beta2.  If you select 3 or less slides the program works as expected with no crash.  My Windows Version is XP service pack 3 currently updated on a phenome II quad core processor with 4GB of memory and plenty of hdd space 340GB free and an Nvidia GTX 460 SE graphics card.

Steps to reproduce:
1. .... Create or load any presentation with 4 or more slides.
2. .... Select 4 or more slides any way you want.
3. .... Select copy from any menu or the copy button.
4. .... Crash!
5. .... Recovery Process.
6. .... program and presentation open a previous state.

Current behavior:Crashes when 4 or more slides are copied.

Expected behavior:Slides are copied ready to be pasted.

              
Operating System: Windows XP
Version: 4.0.0.0.beta2
Comment 1 Jorendc 2013-01-10 01:18:04 UTC
Thanks for reporting!

I can reproduce this behavior with latest LibreOffice 4.1 (Version 4.1.0.0.alpha0+ (Build ID: 92afb61d8bb1b264a945371065115981ecaed0f)) and Ubuntu 12.10 x64

Can't reproduce using 3.6.4.3 -> regression

I also mark this as a blocker for mab4.0
Comment 2 Jorendc 2013-01-10 01:31:03 UTC
Bibisect output:

joren@Ubuntu-Joren:~/bibisect40$ git bisect bad 93c63abb4e0a296a72b1f7c5cc4353aa1042b726 is the first bad commit
commit 93c63abb4e0a296a72b1f7c5cc4353aa1042b726
Author: Bjoern Michaelsen <bjoern.michaelsen@canonical.com>
Date:   Mon Dec 10 08:11:00 2012 +0000

    source-hash-37b9e290d9e3d20652df0abe1a1458412f3cfe2c
    
    commit 37b9e290d9e3d20652df0abe1a1458412f3cfe2c
    Author:     Peter Foley <pefoley2@verizon.net>
    AuthorDate: Thu Aug 16 13:51:54 2012 -0400
    Commit:     Peter Foley <pefoley2@verizon.net>
    CommitDate: Thu Aug 16 17:54:54 2012 -0400
    
        fix openssl build with VS2012
    
        Change-Id: Ic0e04ab920c50320785f2e1b847026cc4e7b1e0d

:100644 100644 d5cd0596d367951df92d05f577e3847bde477733 445034760a67365d3bec4a003cb733c0b8aae97a M	ccache.log
:100644 100644 53577b741827fef73674a1c0aaa1d0560dcd664c eca255af392eb4acc69d7b7ef6a6015a38572939 M	commitmsg
:100644 100644 bacae80c7411d67901c4c9adc72d319e9e573e12 d37363a1adcf8fb7741f59097bde880735ff615d M	dev-install.log
:100644 100644 0c0655ade12ef70098f9b245d5f335386c04f1e7 fd98319ab98b4c456f9b3fa79c533aef66a99e06 M	make.log
:040000 040000 7ffb4e08414500e61817e4ae252957e056603388 aac755ee7c8731f009be798fe62741f3c09250cf M	opt

joren@Ubuntu-Joren:~/bibisect40$ git bisect log
git bisect start
# good: [65fd30f5cb4cdd37995a33420ed8273c0a29bf00] source-hash-d6cde02dbce8c28c6af836e2dc1120f8a6ef9932
git bisect good 65fd30f5cb4cdd37995a33420ed8273c0a29bf00
# bad: [5b4b36d87517a6ea96ff8c84c46b12f462fc9a1a] source-hash-8450a99c744e9005f19173e4df35d65640bcf5c4
git bisect bad 5b4b36d87517a6ea96ff8c84c46b12f462fc9a1a
# good: [16b0b88cbd4ef0f51816e97277e40c5cf78f7bf9] source-hash-099198a4224778fe6e43f5dc13b5b9b1b4dc828c
git bisect good 16b0b88cbd4ef0f51816e97277e40c5cf78f7bf9
# bad: [f28b8f9a6c47fa59bf98fffe937a2f2db7a2445a] source-hash-a581d31b227623e09d2970a91214fda398f98eda
git bisect bad f28b8f9a6c47fa59bf98fffe937a2f2db7a2445a
# good: [5bf3b624cdeb593e55402f44c730209f12813961] source-hash-4b4ca8030285bd66526ff5bb2b6ea5a75a6c6bc7
git bisect good 5bf3b624cdeb593e55402f44c730209f12813961
# good: [70771b69f427dcd3ace8caea819338f104b88c43] source-hash-83837d6514217c82ebe8d56dddf89fa34f4b5435
git bisect good 70771b69f427dcd3ace8caea819338f104b88c43
# good: [3959ee48f25552210657c68840918bc9d0d3b310] source-hash-57c3b583f1f69edd32b2a54253850e1b3b202255
git bisect good 3959ee48f25552210657c68840918bc9d0d3b310
# good: [baa679e0fdc379e107b231ae025b54356846c207] source-hash-4662df8a7561ce71ba00accbb5170e10818d6008
git bisect good baa679e0fdc379e107b231ae025b54356846c207
# bad: [d95c2ba2615d3880b1d3d3e3d6badad7973e7994] source-hash-c3aa1cefdc6521d34a2a32c20bae1593e1edb5ba
git bisect bad d95c2ba2615d3880b1d3d3e3d6badad7973e7994
# bad: [93c63abb4e0a296a72b1f7c5cc4353aa1042b726] source-hash-37b9e290d9e3d20652df0abe1a1458412f3cfe2c
git bisect bad 93c63abb4e0a296a72b1f7c5cc4353aa1042b726
Comment 3 Julien Nabet 2013-01-10 21:05:54 UTC
Created attachment 72807 [details]
bt + console logs on master

On pc Debian x86-64 with master sources updated yesterday (commit c57906c8f614047a488eea6eb77c535bf90a889e), I reproduced the crash.

I attached console logs (I included the description of actions which generated each block) + bt
Comment 4 Julien Nabet 2013-01-10 21:08:10 UTC
Increase Importance, platform All (since Windows+Linux), remove bt-wanted

Radek, Thorsten: one for you?
Comment 5 Caolán McNamara 2013-01-16 16:57:23 UTC
regression from http://cgit.freedesktop.org/libreoffice/core/commit/?id=17afe4cea7e01aef1e5270cc09f438bc6fde3211 presumably
Comment 6 Not Assigned 2013-01-16 20:15:14 UTC
Caolan McNamara committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=63de2b8f1493f24669c78df3bc2d48d13528bd9f

Resolves: fdo#59183 Copy 4 or more slides then crash



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 7 Caolán McNamara 2013-01-16 20:18:36 UTC
fixed in master now, review for 4-0 as https://gerrit.libreoffice.org/#/c/1726/
Comment 8 Not Assigned 2013-01-17 10:09:20 UTC
Caolan McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-4-0":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=54b885dbcf9cf0d32407cb068de8d72e9d441576&h=libreoffice-4-0

Resolves: fdo#59183 Copy 4 or more slides then crash


It will be available in LibreOffice 4.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 9 Julien Nabet 2013-01-19 12:07:30 UTC
*** Bug 59535 has been marked as a duplicate of this bug. ***
Comment 10 Thisisnice1000000 2013-01-24 06:48:58 UTC
Thanks Everyone for working hard and fixing this and many other bugs.  I Just tested on Version 4.1.0.0.alpha0+ (Build ID: b1d0fd4f969976e2133f8eaa37c1fb8360c20f6) and this bug is gone the program copies and paste as expected.

Thanks Again!
Comment 11 Jorendc 2013-01-24 09:56:08 UTC
(In reply to comment #10)
> Thanks Everyone for working hard and fixing this and many other bugs.  I
> Just tested on Version 4.1.0.0.alpha0+ (Build ID:
> b1d0fd4f969976e2133f8eaa37c1fb8360c20f6) and this bug is gone the program
> copies and paste as expected.
> 
> Thanks Again!
I also can't reproduce again. So set bug status to VERIFIED FIXED. Thank you very much!
Comment 12 Robinson Tryon (qubit) 2015-12-22 01:37:24 UTC Comment hidden (obsolete)